--- a/style.css
+++ b/style.css
@@ -27,8 +27,10 @@ body {
 }
 
 #navigation {
+    background-color: #222;
+    color: #ddd;
     height: auto;
-    z-index: 20;
+    z-index: 11;
 }
 
 #main {
@@ -36,7 +38,7 @@ body {
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
-    z-index: 11;
+    z-index: 12;
 }
 
 .position-absolute {
@@ -54,18 +56,39 @@ body {
     justify-content: center;
 }
 
+#nav-div {
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+
 #nav-menu {
     display: inline-flex;
-    border: solid red;
+    list-style: none;
     height: auto;
-    width: 80vw;
     margin-top: 2vh;
     margin-bottom: 2vh;
 }
 
 .nav-item {
-    border: solid blue;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
     text-align: center;
+    overflow-y: hidden;
+}
+
+.nav-links {
+    font-style: normal;
+    text-decoration: none;
+    color: #ddd;
+    font-size: 28px;
+    padding: 11px 13px;
+}
+
+.nav-links:hover {
+    background-color: #ddd;
+    color: #222;
+    border-radius: 12px;
 }
 
 .entries {
