--- a/style.css
+++ b/style.css
@@ -27,18 +27,21 @@ body {
 }
 
 #navigation {
+    display: fixed;
     background-color: #222;
     color: #ddd;
-    height: auto;
-    z-index: 11;
+    height: 10vh;
+    max-height: 80px;
+    z-index: 20;
 }
 
 #main {
+    position: fixed;
     font-family: Reem Kufi Fun, sans-serif;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
     scroll-behavior: smooth;
-    z-index: 12;
+    z-index: 11;
 }
 
 .position-absolute {
@@ -59,6 +62,8 @@ body {
 #nav-div {
     margin-left: 2vw;
     margin-right: 2vw;
+    height: 100%;
+    overflow-y: hidden;
 }
 
 #nav-menu {
@@ -147,7 +152,7 @@ a {
     overflow: hidden;
 }
 
-.image-div {
+.image-div1 {
     position: absolute;
     display: block;
     height: auto;
@@ -155,48 +160,56 @@ a {
     overflow: hidden;
 }
 
-.image-div:nth-child(1) {
+.image-div2 {
+    position: absolute;
+    display: block;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+}
+
+.image-div1:nth-child(1) {
     left: 20vw;
     animation: animate 15s linear infinite;
     animation-delay: -7s;
 }
 
-.image-div:nth-child(2) {
+.image-div1:nth-child(2) {
     left: 50vw;
     animation: animate 20s linear infinite;
     animation-delay: -5s;
 }
 
-.image-div:nth-child(3) {
+.image-div1:nth-child(3) {
     left: 70vw;
     animation: animate 20s linear infinite;
     animation-delay: 0s;
 }
 
-.image-div:nth-child(4) {
+.image-div1:nth-child(4) {
     left: 0vw;
     animation: animate 15s linear infinite;
     animation-delay: -5s;
 }
 
-.image-div:nth-child(5) {
+.image-div1:nth-child(5) {
     left: 85vw;
     animation: animate 18s linear infinite;
     animation-delay: -10s;
 }
 
-.image-div:nth-child(6) {
+.image-div1:nth-child(6) {
     left: 0vw;
     animation: animate 12s linear infinite;
 }
 
-.image-div:nth-child(7) {
+.image-div1:nth-child(7) {
     left: 15vw;
     animation: animate 14s linear infinite;
     animation-delay: -10s;
 }
 
-.image-div:nth-child(8) {
+.image-div1:nth-child(8) {
     left: 60vw;
     animation: animate 15s linear infinite;
 }
@@ -228,31 +241,109 @@ a {
     }
 }
 
+.image-div2:nth-child(1) {
+    left: 65vw;
+    animation: animate2 14s linear infinite;
+    animation-delay: -7s;
+}
+
+.image-div2:nth-child(2) {
+    left: 65vw;
+    animation: animate2 10s linear infinite;
+    animation-delay: -5s;
+}
+
+.image-div2:nth-child(3) {
+    left: 70vw;
+    animation: animate2 13s linear infinite;
+    animation-delay: 0s;
+}
+
+.image-div2:nth-child(4) {
+    left: 0vw;
+    animation: animate2 14s linear infinite;
+    animation-delay: -5s;
+}
+
+.image-div2:nth-child(5) {
+    left: 85vw;
+    animation: animate2 15s linear infinite;
+    animation-delay: -10s;
+}
+
+.image-div2:nth-child(6) {
+    left: 0vw;
+    animation: animate2 20s linear infinite;
+}
+
+.image-div2:nth-child(7) {
+    left: 15vw;
+    animation: animate2 16s linear infinite;
+    animation-delay: -10s;
+}
+
+.image-div2:nth-child(8) {
+    left: 60vw;
+    animation: animate2 18s linear infinite;
+}
+
+@keyframes animate2{
+    0% {
+        opacity: 0;
+        top: -10vh;
+        transform: translateX(20px) rotate(0deg);
+    }
+    10% {
+        opacity: 1;
+    }
+    20% {
+        transform: translateX(-60px) rotate(70deg);
+    }
+    40% {
+        transform: translateX(-60px) rotate(140deg);
+    }
+    60% {
+        transform: translateX(-60px) rotate(220deg);
+    }
+    80% {
+        transform: translateX(-60px) rotate(280deg);
+    }
+    100% {
+        top: 110vh;
+        transform: translateX(-60px) rotate(360deg);
+    }
+}
+
 .set1 {
     transform: rotate3d(1.5, 1.5, 1.5, -25deg);
+    scale: 1.3;
     z-index: 1;
 }
 
 .set2 {
-    transform: translateY(50px) translateX(-50px) scale(1.5) rotateY(180deg) rotate3d(-1, -2, 1.5, 55deg);
+    transform: translateY(50px) scale(1.5) rotateY(180deg) rotate3d(-1, 4, 2.5, 55deg);
+    scale: 1.2;
     filter: blur(1px);
     z-index: 2;
 }
 
 .set3 {
-    transform: translateY(-250px) translateX(100px) scale(1.2) rotateY(180deg) rotate3d(1.5, 1, 2, 35deg);
+    transform: translateX(100px) scale(1.2) rotateY(180deg) rotate3d(4, 2, 4, 30deg);
+    scale: 1.25;
     filter: blur(2px);
     z-index: 3;
 }
 
 .set4 {
-    transform: translateY(50px) translateX(50px) scale(0.8) rotateY(180deg) rotate3d(1, 1.5, 2, 50deg);
+    transform: translateX(0px) scale(0.8) rotateY(180deg) rotate3d(-1, 5, 4, 60deg);
+    scale: 2.1;
     filter: blur(4px);
     z-index: 2;
 }
 
 .set5 {
-    transform: translateY(-100px) translateX(-50px) scale(1.2) rotateY(180deg) rotate3d(1, -1, 1, 45deg);
+    transform: scale(1.2) rotateY(180deg) rotate3d(2.5, -1, 7, 50deg);
+    scale: 1.4;
     filter: blur(3px);
     z-index: 2;
 }
