--- a/style.css
+++ b/style.css
@@ -108,6 +108,12 @@ h1 {
     font-size: 60px;
 }
 
+h2 {
+    font-size: 48px;
+    margin-right: 35vw;
+    margin-left: 10vw;
+}
+
 p {
     font-size: 30px;
     margin-right: 35vw;
